# first-juce-plugin

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md
scripts/: dev-build.sh  dev-debug.sh  dev-test.sh  dev-watch.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: PluginProcessorTests.cpp  SineWaveSoundTests.cpp  SineWaveVoiceTests.cpp
